# littlefs-rust

./: .gitignore  .upstream  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  dev-init.sh  justfile  release-plz.toml
.cargo/: config.toml
.cursor/commands/: cleanup.md
.cursor/plans/: fix_bad-block_ctzstruct_corruption_9ab249c4.plan.md
.github/workflows/: ci.yml
docs/: 2026-03-03-parameterized-test-bugs.md  function-inventory.md  reference.md  rules.md  traverse-restructure-notes.md
docs/alignment/: 2026-03-03-alignment-report-1.md
docs/bugs/: 2026-03-04-bad-blocks-pacman-metadata.md  2026-03-04-bugs-traverse-and-shrink.md
docs/bugs/2026-03-04-bad-blocks/: 2026-03-04-bad-blocks-pacman-metadata.md
docs/bugs/2026-03-05-bad-blocks-ctzstruct/: FIX_REPORT.md  parse_trace.py
docs/bugs/2026-03-05-block-relocation-data-loss/: 2026-03-05-block-relocation-data-loss.md  Makefile  repro_exhaustion  repro_exhaustion.c  repro_wear_leveling.c
docs/bugs/2026-03-05-ctz-find-offset/: 2026-03-05-ctz-find-offset.md
docs/bugs/2026-03-05-ctz-traverse-pcache/: 2026-03-05-ctz-traverse-pcache.md
docs/bugs/2026-03-05-dir-split-empty-pair/: 2026-03-05-dir-split-empty-pair.md  Makefile  repro_remove26  repro_remove26.c  repro_remove26_trace  repro_remove26_trace.c
docs/bugs/2026-03-05-file-size-during-write/: 2026-03-05-file-size-during-write.md
docs/implementation-notes/: 2026-03-03-count-max-id.md  metadata-vs-lfs-c.md
docs/logs/: ab-comparison-20260304.md  c-badblock-README.md
docs/plans-done/: test_superblocks_magic-debug-strategy.md
docs/roadmap/: 03-phase-function-inventory.md  04-phase-stubs.md  05-phase-incremental-impl.md  06-phase-test-expansion.md  07-phase-safe-api.md
docs/roadmap-1/: 00-notes.md  01-metadata-read.md  02-block-caching.md  03-directory-mutations.md  04-file-read.md  05-file-write.md  06-power-loss.md
docs/roadmap1/: 00-overview.md  01-phase-setup.md  02-phase-structures.md
docs/roadmap2/: 00-overview.md  01-phase-metadata-read.md  02-phase-block-caching.md  03-phase-directory-mutations.md  04-phase-file-read.md  05-phase-file-write.md  06-phase-power-loss.md  07-phase-remaining-tests.md  07a-phase-paths-move.md  07b-phase-entries.md  07c-phase-relocations.md  07d-phase-alloc.md  07e-phase-attrs.md  08-phase-robustness.md
littlefs-rust/: Cargo.toml  README.md
littlefs-rust-compat/: Cargo.toml  README.md
littlefs-rust-compat/src/: c_impl.rs  lib.rs  rust_impl.rs  storage.rs
littlefs-rust-compat/tests/: test_compat.rs  test_operations.rs
littlefs-rust-core/: Cargo.toml
littlefs-rust-core/src/dir/: commit.rs
littlefs-rust-core/tests/: test_alloc.rs  test_attrs.rs  test_badblocks.rs  test_compat.rs  test_dirs.rs  test_entries.rs  test_evil.rs  test_exhaustion.rs  test_files.rs  test_infra.rs  test_interspersed.rs  test_move.rs  test_orphans.rs  test_paths.rs  test_powerloss.rs  test_relocations.rs  test_seek.rs  test_shrink.rs  test_superblocks.rs  test_truncate.rs
littlefs-rust-core/tests/common/: dump.rs  mod.rs  powerloss.rs
littlefs-rust/examples/: ram_hello.rs  ram_tree.rs
littlefs-rust/src/: config.rs  dir.rs  error.rs  file.rs  filesystem.rs  lib.rs  ram.rs  storage.rs
littlefs-rust/tests/: integration.rs
lp-littlefs/: Cargo.toml  README.md
lp-littlefs-c-align/: Cargo.toml  README.md
lp-littlefs-c-align/src/: c_lfs.rs  lib.rs  rust_lfs.rs  storage.rs
lp-littlefs-c-align/tests/: align_tests.rs
lp-littlefs-compat/: Cargo.toml  README.md
lp-littlefs-compat/src/: lib.rs  rust_impl.rs  storage.rs
lp-littlefs-compat/tests/: test_compat.rs  test_operations.rs
lp-littlefs-core/: Cargo.toml  README.md
lp-littlefs-core/src/: lib.rs
lp-littlefs-core/src/file/: ops.rs
lp-littlefs-core/src/fs/: format.rs  mkdir.rs
lp-littlefs-core/src/test/: tests.rs
lp-littlefs-core/tests/: test_alloc.rs  test_attrs.rs  test_badblocks.rs  test_compat.rs  test_dirs.rs  test_entries.rs  test_evil.rs  test_exhaustion.rs  test_files.rs  test_infra.rs  test_interspersed.rs  test_move.rs  test_orphans.rs  test_paths.rs  test_powerloss.rs  test_relocations.rs  test_seek.rs  test_shrink.rs  test_superblocks.rs  test_truncate.rs
lp-littlefs-core/tests/common/: mod.rs  powerloss.rs
lp-littlefs-old/src/: crc.rs  error.rs  info.rs  lib.rs
lp-littlefs-old/tests/: test_compat.rs  test_interspersed.rs  test_move.rs  test_powerloss.rs  test_relocations.rs
lp-littlefs/examples/: ram_hello.rs  ram_tree.rs
lp-littlefs/src/: config.rs  crc.rs  dir.rs  error.rs  file.rs  filesystem.rs  info.rs  lfs_gstate.rs  lfs_info.rs  lfs_superblock.rs  lfs_type.rs  lib.rs  macros.rs  metadata.rs  superblock.rs  tag.rs  trace.rs  types.rs  util.rs
lp-littlefs/src/bd/: bd.rs  mod.rs
lp-littlefs/src/block/: cache.rs  mod.rs
lp-littlefs/src/block_alloc/: alloc.rs  mod.rs
lp-littlefs/src/dir/: commit.rs  fetch.rs  find.rs  lfs_fcrc.rs  lfs_mdir.rs  lfs_mlist.rs  mod.rs  open.rs  traverse.rs
lp-littlefs/src/file/: ctz.rs  lfs_ctz.rs  mod.rs  ops.rs
lp-littlefs/src/fs/: alloc.rs  attr.rs  bdcache.rs  commit.rs  consistent.rs  ctz.rs  debug.rs  dir.rs  file.rs  format.rs  grow.rs  gstate.rs  init.rs  metadata.rs  mkdir.rs  mod.rs  mount.rs  parent.rs  path.rs  remove.rs  rename.rs  stat.rs  superblock.rs  traverse.rs
lp-littlefs/src/test/: context.rs  ram.rs  snapshot.rs  tests.rs
lp-littlefs/tests/: integration.rs  test_alloc.rs  test_attrs.rs  test_badblocks.rs  test_bd.rs  test_compat.rs  test_dirs.rs  test_entries.rs  test_evil.rs  test_exhaustion.rs  test_files.rs  test_infra.rs  test_interspersed.rs  test_move.rs  test_orphans.rs  test_paths.rs  test_powerloss.rs  test_relocations.rs  test_seek.rs  test_shrink.rs  test_superblocks.rs  test_truncate.rs
lp-littlefs/tests/common/: mod.rs  powerloss.rs
scripts/: upstream
(+135 files in other folders)
