[package]
name = "littlefs-rust-compat"
version = "0.1.0"
edition = "2021"
description = "C ↔ Rust compatibility tests for littlefs-rust"
license = "BSD-3-Clause"

[dependencies]
littlefs-rust-core = { path = "../littlefs-rust-core" }
littlefs2-sys = { version = "0.3", features = ["malloc"] }

[dev-dependencies]
env_logger = "0.10"
rstest = "0.26"
