[package]
name = "lp-littlefs"
version = "0.1.0"
edition = "2021"
description = "Hand-translated LittleFS from C to Rust (no C dependencies)"
license = "BSD-3-Clause"
repository = "https://github.com/light-player/lp-littlefs"

[lib]
name = "lp_littlefs"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.10"

[features]
default = ["alloc"]
alloc = []
std = []
trace = ["log"]
